--- a/src/View_Controller/main.fxml
+++ b/src/View_Controller/main.fxml
@@ -16,12 +16,12 @@
       <Pane fx:id="partsPane" layoutX="28.0" layoutY="43.0" prefHeight="281.0" prefWidth="549.0">
          <children>
             <Label layoutX="21.0" layoutY="14.0" text="Parts" />
-            <TableView layoutY="40.0" prefHeight="194.0" prefWidth="549.0">
+            <TableView fx:id="partsTable" layoutY="40.0" prefHeight="194.0" prefWidth="549.0">
               <columns>
-                <TableColumn prefWidth="106.0" text="PartID" />
-                <TableColumn prefWidth="111.0" text="Part Name" />
-                  <TableColumn prefWidth="153.0" text="Inventory Level" />
-                  <TableColumn minWidth="0.0" prefWidth="178.0" text="Price/ Cost per Unit" />
+                <TableColumn fx:id="partId" prefWidth="106.0" text="PartID" />
+                <TableColumn fx:id="partName" prefWidth="111.0" text="Part Name" />
+                  <TableColumn fx:id="partStock" prefWidth="153.0" text="Inventory Level" />
+                  <TableColumn fx:id="partPrice" minWidth="0.0" prefWidth="178.0" text="Price/ Cost per Unit" />
               </columns>
             </TableView>
             <TextField layoutX="392.0" layoutY="10.0" />
