--- a/src/View_Controller/addPart.fxml
+++ b/src/View_Controller/addPart.fxml
@@ -23,7 +23,7 @@
       <Label layoutX="73.0" layoutY="270.0" fx:id="companyNameTag" text="Company Name:" />
       <Label layoutX="340.0" layoutY="230.0" prefHeight="17.0" prefWidth="34.0" text="Min:" />
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
-      <TextField layoutX="175.0" layoutY="68.0" fx:id="idInput"/>
+      <TextField layoutX="175.0" disable="true" layoutY="68.0" fx:id="idInput" text="Auto-Gen -Disabled"/>
       <TextField layoutX="175.0" layoutY="108.0" fx:id="nameInput"/>
       <TextField layoutX="175.0" layoutY="148.0" fx:id="invInput"/>
       <TextField layoutX="175.0" layoutY="188.0" fx:id="priceInput"/>
@@ -31,7 +31,7 @@
       <TextField layoutX="175.0" layoutY="268.0" fx:id="machineInput"/>
       <TextField layoutX="175.0" layoutY="268.0" fx:id="companyNameInput"/>
       <TextField layoutX="380.0" layoutY="228.0" fx:id="minInput"/>
-      <Button layoutX="298.0" onAction="#createNewPart" layoutY="323.0" mnemonicParsing="false" text="Save" />
-      <Button layoutX="349.0" layoutY="323.0" mnemonicParsing="false" text="Cancel" />
+      <Button layoutX="298.0" onAction="#save" layoutY="323.0" mnemonicParsing="false" text="Save" />
+      <Button layoutX="349.0" layoutY="323.0" mnemonicParsing="false" onAction="#close" text="Cancel" />
    </children>
 </Pane>
