--- a/src/View_Controller/modifyPart.fxml
+++ b/src/View_Controller/modifyPart.fxml
@@ -11,8 +11,8 @@
         <fx:define>
             <ToggleGroup fx:id="source"/>
         </fx:define>
-        <RadioButton layoutX="149.0" layoutY="37.0" selected="true" toggleGroup="$source" onAction="#inHouseView" mnemonicParsing="false" text="In-House" />
-        <RadioButton layoutX="266.0" layoutY="37.0" toggleGroup="$source" onAction="#outSourceView" mnemonicParsing="false" text="Outsourced" />
+        <RadioButton layoutX="149.0" layoutY="37.0" toggleGroup="$source" onAction="#inHouseView" mnemonicParsing="false" text="In-House" fx:id="inHouseRadio"/>
+        <RadioButton layoutX="266.0" layoutY="37.0" toggleGroup="$source" onAction="#outSourceView" mnemonicParsing="false" text="Outsourced" fx:id="outSourceRadio"/>
 
         <Label layoutX="73.0" layoutY="70.0" text="ID:" />
         <Label layoutX="73.0" layoutY="110.0" text="Name:" />
@@ -31,7 +31,7 @@
         <TextField layoutX="175.0" layoutY="268.0" fx:id="machineInput"/>
         <TextField layoutX="175.0" layoutY="268.0" fx:id="companyNameInput"/>
         <TextField layoutX="380.0" layoutY="228.0" fx:id="minInput"/>
-        <Button layoutX="298.0" layoutY="323.0" mnemonicParsing="false" text="Save" />
-        <Button layoutX="349.0" layoutY="323.0" mnemonicParsing="false" text="Cancel" />
+        <Button layoutX="298.0" layoutY="323.0" mnemonicParsing="false" text="Save" onAction="#save"/>
+        <Button layoutX="349.0" layoutY="323.0" mnemonicParsing="false" text="Cancel" onAction="#close"/>
     </children>
 </Pane>
